# axiom

./: .env.example  .gitignore  README.md  SECURITY.md  bun.lockb  eslint.config.mjs  index.html  package.json  prettier.config.mjs  tailwind.config.ts  tsconfig.node.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/application/: mod.rs
src-tauri/src/application/databases/: backup_project_database_use_case.rs  configure_mysql_use_case.rs  configure_postgres_use_case.rs  create_project_database_migration_use_case.rs  database_type_parser.rs  enroll_database_backup_artifact_trust_use_case.rs  mod.rs  (+20 more)
src-tauri/src/bootstrap/: app_state.rs  dependency_container.rs  mod.rs
src-tauri/src/commands/: database_commands.rs  docker_commands.rs  log_commands.rs  mod.rs  project_commands.rs  runtime_commands.rs  security_commands.rs  service_commands.rs  settings_commands.rs  system_commands.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/infrastructure/: mod.rs
src-tauri/src/platform/: mod.rs
src-tauri/src/ports/: audit_logger.rs  certificate_manager.rs  database_backup_catalog.rs  database_backup_destination_repository.rs  database_backup_policy_repository.rs  database_backup_scheduler.rs  database_dependency_manager.rs  database_provisioner.rs  database_provisioning_repository.rs  docker_client.rs  docker_project_orchestrator.rs  file_system.rs  hosts_file_manager.rs  log_reader.rs  mod.rs  permission_manager.rs  php_runtime_detector.rs  php_runtime_installer.rs  port_scanner.rs  process_manager.rs  project_php_process_manager.rs  project_repository.rs  project_runtime_repository.rs  secure_storage.rs  service_manager.rs
src-tauri/src/shared/: mod.rs
src-tauri/tests/: docker_orchestration_integration.rs
(+310 files in other folders)
