[package]
name = "axiomphp"
version = "0.1.0"
description = "A secure desktop foundation for local PHP development environments."
authors = ["AxiomPHP"]
edition = "2021"
build = "build.rs"

[lib]
name = "axiomphp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "axiomphp"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
directories = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.39"
tauri = { version = "2", features = [] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "sync"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
